--- a/assets/css/UI.css
+++ b/assets/css/UI.css
@@ -4069,7 +4069,7 @@ grid-gap:20px;	  } }
     min-height: 120px; } }
 
 .about .counter-width {
-  background: url(../images/3.jpg) no-repeat center;
+  background: url(../videos/video.mp4) no-repeat center;
   padding: 5em 0em;
   background-size: cover;
   text-align: center;
